--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "name": " ",
-  "version": "0.0.1",
-  "description": "",
+  "name": "portfolio-emerson-rodas",
+  "version": "1.0.0",
+  "description": "Portfolio profesional de Emerson Rodas - Desarrollador Frontend",
   "private": true,
   "keywords": [
-    ""
+    "portfolio",
+    "frontend",
+    "developer",
+    "web",
+    "javascript"
   ],
-  "license": "",
-  "author": "",
+  "license": "MIT",
+  "author": "Emerson Eduardo Rodas López",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open --config webpack.config.dev.js",
-    "build": "webpack --config webpack.config.prod.js"
+    "build": "webpack --config webpack.config.prod.js",
+    "dev": "npx live-server ."
   },
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
@@ -20,5 +25,8 @@
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
     "webpack-merge": "^5.10.0"
+  },
+  "dependencies": {
+    "@emailjs/browser": "^4.4.1"
   }
 }
